# transactions_app

./: .coverage  .env  .env.template  .flake8  .gitignore  README.md  default.nix  pyproject.toml  pyrightconfig.json  report.json  report_20250324_182931.json  report_20250324_190432.json  report_20250324_190433.json  requirements.txt
.idx/: dev.nix
data/: transactions.json
src/: main.py  reports.py  services.py  utils.py  views.py
src/utils/: currency.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
