[project]
name = "transactions_app"
version = "0.1.0"
description = ""
authors = [
    {name = "PRCHR-u", email = "158329942+PRCHR-u@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '\.git/'

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv/"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.961"
